routes/HomeClient/TitleScreen/Banner/index.module.css
.root {
  /* height: 100%; */
  position: relative;
  width: 100%;
}

.root img {
  width: 100%;
  /* height: 100%; */
  object-fit: cover;
}

.date,
.address, .root h1 {
  position: absolute;
  color: var(--color-text-on-dark);
  z-index: 2;
}

.root h1 {
  margin:0;
  font-weight: bold;
}
.titleShadow {
  /* --color-surface-dark: red; */
  position: absolute;
  user-select: none;
  color: transparent;
  z-index:1;
  text-shadow:
    0.05em  0   var(--color-surface-dark),
   -0.05em  0   var(--color-surface-dark),
    0    0.05em var(--color-surface-dark),
    0.05em    -0.05em var(--color-surface-dark),
    0.05em    0.05em var(--color-surface-dark),
    0   -0.05em var(--color-surface-dark);
  font-weight: bold;
}


@media (min-width: 75rem) {
  .root img {
    aspect-ratio: 2560/978;
  }

  .root {
    max-height: 61.125rem;
  }
  .date {
    font-size: 5.5vw;
    top: 16.2vw;
    left: 59.5vw;
  }
  .address {
    font-size: 4.2vw;
    top: 24vw;
    left: 55.2vw;
  }
  .root h1, .titleShadow {
    font-size: 9.75vw;
    top: 4.235vw;
    left: 58vw;
    letter-spacing: 0.07em;
  }
}

@media (min-width: 48rem) and (max-width: 75rem) {
  .root img {
    aspect-ratio: 1560/1074;
  }

  .root {
    max-height: 67.125rem;
  }
  .date {
    font-size: 6.45vw;
    top: 32.6vw;
    left: 57.4vw;
  }
  .address {
    font-size: 6vw;
    top: 43vw;
    left: 38vw;
  }
  .root h1, .titleShadow {
    font-size: 17.5vw;
    top: 11.625vw;
    left: 50vw;
    letter-spacing: -0.014em;
  }
}

@media (max-width: 48rem) {
  .root img {
    aspect-ratio: 640/600;
  }

  .root {
    max-height: 37.5rem;
  }
  .date {
    font-size: 7.5vw;
    top: 45.3vw;
    left: 47.8vw;
  }
  .address {
    font-size: 6.25vw;
    top: 55.5vw;
    left: 25.3vw;
  }
  .root h1, .titleShadow {
    font-size: 17.5vw;
    top: 22.725vw;
    left: 42vw;
    letter-spacing: -0.004em;
  }
}

